  . Fixed bug #66869 (Invalid 2nd argument crashes imageaffinematrixget) (Pierre)
  . Fixed bug #66887 (imagescale - poor quality of scaled image). (Remi)
  . Fixed bug #66890 (imagescale segfault). (Remi)
  . Fixed bug #66893 (imagescale ignore method argument). (Remi)

- Hash:
  . hash_pbkdf2() now works correctly if the $length argument is not specified.
    (Nikita)

- Mail:
  . Fixed bug #66535 (Don't add newline after X-PHP-Originating-Script) (Tjerk)

- MySQLi:
  . Fixed bug #66762i (Segfault in mysqli_stmt::bind_result() when link closed)
  (Remi)

- OPCache
  . Added function opcache_is_script_cached(). (Danack)
  . Added information about interned strings usage. (Terry, Julien, Dmitry)

- Openssl:
  . Fixed bug #66833 (Default disgest algo is still MD5, switch to SHA1). (Remi)

- GMP
  . Fixed bug #66872 (invalid argument crashes gmp_testbit) (Pierre)

- SQLite:
  . Updated bundled libsqlite to 3.8.3.1 (Anatol)

06 Mar 2014, PHP 5.5.10

- Core:
  . Fixed Request #66574i (Allow multiple paths in php_ini_scanned_path). (Remi)

- Date:
  . Fixed bug #45528 (Allow the DateTimeZone constructor to accept timezones
    per offset too). (Derick)

- Fileinfo:
  . Bug #66731 (file: infinite recursion) (CVE-2014-1943). (Remi)
  . Fixed bug #66820 (out-of-bounds memory access in fileinfo)
    (CVE-2014-2270). (Remi)

- GD
  . Fixed Bug #66815 (imagecrop(): insufficient fix for NULL defer
    CVE-2013-7327). (Tomas Hoger, Remi)

- JSON:
  . Fixed bug #65753 (JsonSerializeable couldn't implement on module extension)
  (chobieeee@php.net)

- LDAP:
  . Implemented ldap_modify_batch (https://wiki.php.net/rfc/ldap_modify_batch).
  (Ondřej Hošek)

- Openssl:
  . Fixed bug #66501 (Add EC key support to php_openssl_is_private_key).
  (Mark Zedwood)

- PCRE:
  . Upgraded to PCRE 8.34. (Anatol)

- Pgsql:
  . Added warning for dangerous client encoding and remove possible injections
    for pg_insert()/pg_update()/pg_delete()/pg_select(). (Yasuo)


06 Feb 2014, PHP 5.5.9
